Project link test

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
         </style>
     </head>
     <body>
-        <h1>Caden Oslund's Portfolio</h1>
+        <h1 style="text-align:center">Caden Oslund's Portfolio</h1>
+
+        <h2 style="text-align:center">Projects</h2>
+        <a style="text-align:center" href="https://admiralgama.github.io/Elite-Material-Sorter/">Elite Dangerous Material Sorter</a>
 
         <script type="text/javascript" src="main.js"></script>
     </body>
