link button test

--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
     <head>
         <title>Caden Oslund's Portfolio</title>
-        <style>
-            body {
-                background-color: black;
-                color: white;
-            }
-        </style>
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <h1 style="text-align:center">Caden Oslund's Portfolio</h1>
 
         <h2 style="text-align:center">Projects</h2>
-        <a style="text-align:center" href="https://admiralgama.github.io/Elite-Material-Sorter/">Elite Dangerous Material Sorter</a>
+        <a href="https://admiralgama.github.io/Elite-Material-Sorter/" style="align-self: center;"><button>Elite Dangerous Material Sorter</button></a>
+        <!--<a href="https://admiralgama.github.io/Elite-Material-Sorter/" class="button">
+            <span style="text-align: center;">Elite Dangerous Material Sorter</span></a>-->
 
         <script type="text/javascript" src="main.js"></script>
     </body>
