centered button test

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
         <h1 style="text-align:center">Caden Oslund's Portfolio</h1>
 
         <h2 style="text-align:center">Projects</h2>
-        <a href="https://admiralgama.github.io/Elite-Material-Sorter/" style="align-self: center;"><button>Elite Dangerous Material Sorter</button></a>
-        <!--<a href="https://admiralgama.github.io/Elite-Material-Sorter/" class="button">
-            <span style="text-align: center;">Elite Dangerous Material Sorter</span></a>-->
+        <a href="https://admiralgama.github.io/Elite-Material-Sorter/" style="text-align:center"><button >Elite Dangerous Material Sorter</button></a>
 
         <script type="text/javascript" src="main.js"></script>
     </body>
