fixed button align

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1 style="text-align:center">Caden Oslund's Portfolio</h1>
+        <h1>Caden Oslund's Portfolio</h1>
+        
+        <h2>Projects</h2>
 
-        <h2 style="text-align:center">Projects</h2>
-        <a href="https://admiralgama.github.io/Elite-Material-Sorter/"><button style="margin-left: auto;" style="margin-right: auto;">Elite Dangerous Material Sorter</button></a>
-
+        <div class="centered-buttons">
+            <a href="https://admiralgama.github.io/Elite-Material-Sorter/" target="_blank"><button>Elite Dangerous Material Sorter</button></a>
+        </div>
+        
         <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
