--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <h2>Projects</h2>
 
         <div class="centered-buttons">
-            <a href="https://admiralgama.github.io/Elite-Material-Sorter/" target="_blank"><button>Elite Dangerous Material Sorter</button></a>
+            <!--<a href="https://admiralgama.github.io/Elite-Material-Sorter/" target="_blank"><button>Elite Dangerous Material Sorter</button></a>-->
+            <a href="Elite-Material-Sorter.html" target="_blank"><button>Elite Dangerous Material Sorter</button></a>
         </div>
         
         <script type="text/javascript" src="main.js"></script>
