--- a/projects/Elite-Material-Sorter.html
+++ b/projects/Elite-Material-Sorter.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <title>Elite Material Sorter</title>
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="../css/main.css">
     </head>
     <body>
         <h1>Elite Material Sorter</h1>
 
-        <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript" src="../js/main.js"></script>
     </body>
 </html>
