Removing -old files

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <div class="centered-buttons">
             <a href="projects/Elite-Material-Sorter.html" target="_blank"><button>Elite Dangerous Material Sorter</button></a>
         </div>
+
+        <!--<button type="button" id="Button 1" onclick="buttonPressed(id);">Button</button>-->
         
         <script type="text/javascript" src="js/main.js"></script>
     </body>
