Added menu and fixed layout

--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title>Caden Oslund's Portfolio</title>
+        <title>Portfolio</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1>Caden Oslund's Portfolio</h1>
-        
-        <h2>Projects</h2>
+        <div class="centered-buttons">
+            <ul style="position: fixed;">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#aboutme">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="Resume.html" target="_blank">Resume</a></li>
+            </ul>
+        </div>
+
+        <h1 id="home">Caden Oslund's Portfolio</h1>
+
+        <h2 id="aboutme">About Me</h2>
+
+        <h2 id="projects">Projects</h2>
 
         <div class="centered-buttons">
             <a href="projects/Elite-Material-Sorter.html" target="_blank"><button>Elite Dangerous Material Sorter</button></a>
         </div>
+
+        <h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1><h1>test</h1>
 
         <!--<button type="button" id="Button 1" onclick="buttonPressed(id);">Button</button>-->
         
