--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#aboutme">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="Resume.html" target="_blank">Resume</a></li>
+                <li><a href="#resume" target="_blank">Resume</a></li>
             </ul>
         </div>
 
-        <h1 id="home">Caden Oslund's Portfolio</h1>
+        <h1 id="home">Caden Oslund Portfolio</h1>
 
         <h2 id="aboutme">About Me</h2>
 
@@ -23,6 +23,8 @@
         <div class="centered-buttons">
             <a href="projects/Elite-Material-Sorter.html" target="_blank"><button>Elite Dangerous Material Sorter</button></a>
         </div>
+
+        <h2 id="resume">Resume</h2>
 
         <!--<button type="button" id="Button 1" onclick="buttonPressed(id);">Button</button>-->
         
