--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
         <h2 id="resume">Resume</h2>
 
+        <div class="centered-buttons">
+            <a href="resources/CadenOslundResume.pdf" download=""><button>Download Resume</button></a>
+        </div>
+
         <!--<button type="button" id="Button 1" onclick="buttonPressed(id);">Button</button>-->
         
         <script type="text/javascript" src="js/main.js"></script>
