Fixed resume link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#aboutme">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#resume" target="_blank">Resume</a></li>
+                <li><a href="#resume">Resume</a></li>
             </ul>
         </div>
 
