--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <div class="centered-buttons">
+        <div class="centered">
             <ul style="position: fixed;">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#aboutme">About Me</a></li>
@@ -20,14 +20,14 @@
 
         <h2 id="projects">Projects</h2>
 
-        <div class="centered-buttons">
+        <div class="centered">
             <a href="projects/Elite-Material-Sorter.html" target="_blank"><button>Elite Dangerous Material Sorter</button></a>
         </div>
 
         <h2 id="resume">Resume</h2>
 
-        <div class="centered-buttons">
-            <a href="resources/CadenOslundResume.pdf" download=""><button>Download Resume</button></a>
+        <div class="centered">
+            <a href="resources/CadenOslundResume.pdf" download><button>Download Resume</button></a>
         </div>
 
         <!--<button type="button" id="Button 1" onclick="buttonPressed(id);">Button</button>-->
