--- a/projects/Elite-Material-Sorter.html
+++ b/projects/Elite-Material-Sorter.html
@@ -5,8 +5,30 @@
         <link rel="stylesheet" href="../css/main.css">
     </head>
     <body>
-        <h1>Elite Material Sorter</h1>
+        <h1 style="margin-top: 10px; margin-bottom: 10px;">Elite Material Sorter</h1>
 
-        <script type="text/javascript" src="../js/main.js"></script>
+        <div class="centered">
+            <label for="input">Input from Coriolis:</label>
+        </div>
+        <br>
+
+        <div class="centered">
+            <textarea id="input" rows="15" cols="50" placeholder="Enter text here..."></textarea>
+        </div>
+
+        <div class="centered" style="margin-top: 10px; margin-bottom: 10px;">
+            <button onclick="convert()">Convert</button>
+        </div>
+
+        <div class="centered">
+            <label for="output">Output:</label>
+        </div>
+        <br>
+
+        <div class="centered">
+            <textarea id="output" rows="15" cols="50" readonly></textarea>
+        </div>
+
+        <script type="text/javascript" src="../js/sorter.js"></script>
     </body>
 </html>
