--- a/projects/Elite-Material-Sorter.html
+++ b/projects/Elite-Material-Sorter.html
@@ -8,9 +8,8 @@
         <h1 style="margin-top: 10px; margin-bottom: 10px;">Elite Material Sorter</h1>
 
         <div class="centered">
-            <label for="input">Input from Coriolis:</label>
+            <label for="input" style="margin-bottom: 5px;">Input from Coriolis:</label>
         </div>
-        <br>
 
         <div class="centered">
             <textarea id="input" rows="15" cols="50" placeholder="Enter text here..."></textarea>
@@ -21,9 +20,8 @@
         </div>
 
         <div class="centered">
-            <label for="output">Output:</label>
+            <label for="output" style="margin-bottom: 5px;">Output:</label>
         </div>
-        <br>
 
         <div class="centered">
             <textarea id="output" rows="17" cols="50" readonly></textarea>
