--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
 
         <h2 id="resume">Resume</h2>
 
+        <!--<div class="centered" style="margin-bottom: 20px;">
+            <embed src="resources/CadenOslundResume.pdf" width="1000" height="1150" type="application/pdf">
+        </div>-->
+
+        <div class="centered" style="margin-bottom: 20px;">
+            <a href="resume.html" target="_blank"><button>View</button></a>
+        </div>
+
         <div class="centered">
-            <a href="resources/CadenOslundResume.pdf" download><button>Download Resume</button></a>
+            <a href="resources/CadenOslundResume.pdf" download><button>Download</button></a>
         </div>
     </body>
 </html>
