--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </ul>
         </div>
 
-        <h1 id="home">Caden Oslund Portfolio</h1>
+        <h1 id="home" style="margin-top: 60px;">Caden Oslund Portfolio</h1>
 
         <h2 id="aboutme">About Me</h2>
         
@@ -23,6 +23,10 @@
         <div class="centered">
             <a href="projects/Elite-Material-Sorter.html" target="_blank"><button>Elite Dangerous Material Sorter</button></a>
         </div>
+        
+        <div class="centered">
+            <a href="projects/Android-Apps.html" target="_blank"><button>Android Apps</button></a>
+        </div>
 
         <h2 id="resume">Resume</h2>
 
@@ -30,7 +34,7 @@
             <embed src="resources/CadenOslundResume.pdf" width="1000" height="1150" type="application/pdf">
         </div>-->
 
-        <div class="centered" style="margin-bottom: 20px;">
+        <div class="centered">
             <a href="resume.html" target="_blank"><button>View</button></a>
         </div>
 
