--- a/projects/Elite-Material-Sorter.html
+++ b/projects/Elite-Material-Sorter.html
@@ -5,22 +5,22 @@
         <link rel="stylesheet" href="../css/main.css">
     </head>
     <body>
-        <h1 style="margin-top: 10px; margin-bottom: 10px;">Elite Material Sorter</h1>
+        <h1>Elite Material Sorter</h1>
 
         <div class="centered">
-            <label for="input" style="margin-bottom: 5px;">Input from Coriolis:</label>
+            <label for="input">Input from Coriolis:</label>
         </div>
 
         <div class="centered">
             <textarea id="input" rows="15" cols="50" placeholder="Enter text here..."></textarea>
         </div>
 
-        <div class="centered" style="margin-top: 10px; margin-bottom: 10px;">
+        <div class="centered">
             <button onclick="convert()">Convert</button>
         </div>
 
         <div class="centered">
-            <label for="output" style="margin-bottom: 5px;">Output:</label>
+            <label for="output">Output:</label>
         </div>
 
         <div class="centered">
