--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
         <h2 id="projects">Projects</h2>
 
         <div class="centered">
-            <a href="projects/Elite-Material-Sorter.html" target="_blank"><button>Elite Dangerous Material Sorter</button></a>
-        </div>
-        
-        <div class="centered">
             <a href="projects/Android-Apps.html" target="_blank"><button>Android Apps</button></a>
+        </div>
+
+        <div class="centered">
+            <a href="projects/Water-Quality.html" target="_blank"><button>Water Quality Monitoring</button></a>
+        </div>
+
+        <div class="centered">
+            <a href="projects/Elite-Material-Sorter.html" target="_blank"><button>Elite Dangerous Material Sorter</button></a>
         </div>
 
         <h2 id="resume">Resume</h2>
