--- a/projects/Android-Apps.html
+++ b/projects/Android-Apps.html
@@ -1,15 +1,19 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title>Project Title</title>
+        <title>Android Apps</title>
         <link rel="stylesheet" href="../css/main.css">
     </head>
     <body>
-        <h1>Project Title</h1>
+        <h1>Android Apps</h1>
 
         <h2>Othello</h2>
 
-        <p>Othello content</p>
+        <div class="centered">
+            <img src="../images/OthelloGamePlay.png" height="400px"/>
+        </div>
+
+        <p>I recreated the game of Othello as a mobile application using Android Studio. It displays a game board with all currently placed pieces, and shows available places where the current player can place a piece. This required the use of advanced logic to calculate available placement positions, as the game of Othello determines where you can place pieces depending on those already placed. Thus, it must take into account every piece already on the board. It also displays who's turn it is, as well as the running score and gives an option to restart the game.</p>
 
         <h2>Astronomy Picture of the Day</h2>
 
