Full Projects Page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="centered">
-            <a href="projects/Elite-Material-Sorter.html" target="_blank"><button>Elite Dangerous Material Sorter</button></a>
+            <a href="projects.html" target="_blank"><button>Full List</button></a>
         </div>
 
         <h2 id="resume">Resume</h2>
