--- a/projects/Water-Quality.html
+++ b/projects/Water-Quality.html
@@ -8,5 +8,9 @@
         <h1>Water Quality Monitoring</h1>
 
         <p>Water Quality Monitoring content</p>
+
+        <div class="centered">
+            <a href="https://github.com/AdmiralGama/WaterQualityMonitoringModel" target="_blank"><button class="repo-button">Repository</button></a>
+        </div>
     </body>
 </html>
