--- a/projects/Android-Apps.html
+++ b/projects/Android-Apps.html
@@ -15,8 +15,16 @@
 
         <p>I recreated the game of Othello as a mobile application using Android Studio. It displays a game board with all currently placed pieces, and shows available places where the current player can place a piece. This required the use of advanced logic to calculate available placement positions, as the game of Othello determines where you can place pieces depending on those already placed. Thus, it must take into account every piece already on the board. It also displays who's turn it is, as well as the running score and gives an option to restart the game.</p>
 
+        <div class="centered">
+            <a href="https://github.com/AdmiralGama/OthelloMobileApp" target="_blank"><button class="repo-button">Repository</button></a>
+        </div>
+
         <h2>Astronomy Picture of the Day</h2>
 
         <p>APoD content</p>
+
+        <div class="centered">
+            <a href="https://github.com/AdmiralGama/PictureOfTheDayMobileApp" target="_blank"><button class="repo-button">Repository</button></a>
+        </div>
     </body>
 </html>
