--- a/index.html
+++ b/index.html
@@ -1,49 +1,26 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title>Portfolio</title>
+        <title>AdmiralGama's Site</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+        <h1 style="margin-top: 60px;">AdmiralGama's Site</h1>
+
         <div class="centered">
-            <ul style="position: fixed;">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#aboutme">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#resume">Resume</a></li>
-            </ul>
+            <a href="portfolio.html" target="_blank"><button>Software Engineering Portfolio</button></a>
         </div>
-
-        <h1 id="home" style="margin-top: 60px;">Caden Oslund Portfolio</h1>
-
-        <h2 id="aboutme">About Me</h2>
         
-        <h2 id="projects">Projects</h2>
-
         <div class="centered">
-            <a href="projects/Android-Apps.html" target="_blank"><button>Android Apps</button></a>
+            <a href="comics.html" target="_blank"><button>Comics</button></a>
         </div>
 
         <div class="centered">
-            <a href="projects/Water-Quality.html" target="_blank"><button>Water Quality Monitoring</button></a>
+            <a href="art.html" target="_blank"><button>Art Portfolio</button></a>
         </div>
 
         <div class="centered">
-            <a href="projects.html" target="_blank"><button>Full List</button></a>
-        </div>
-
-        <h2 id="resume">Resume</h2>
-
-        <!--<div class="centered" style="margin-bottom: 20px;">
-            <embed src="resources/CadenOslundResume.pdf" width="1000" height="1150" type="application/pdf">
-        </div>-->
-
-        <div class="centered">
-            <a href="resume.html" target="_blank"><button>View</button></a>
-        </div>
-
-        <div class="centered">
-            <a href="resources/CadenOslundResume.pdf" download><button>Download</button></a>
+            <a href="electronics.html" target="_blank"><button>Electronics Projects</button></a>
         </div>
     </body>
 </html>
