--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
         <div class="centered">
             <a href="electronics.html" target="_blank"><button>Electronics Projects</button></a>
         </div>
+
+        <div class="centered">
+            <a href="system.html" target="_blank"><button>System Info</button></a>
+        </div>
+
+        <div class="centered">
+            <a href="socials.html" target="_blank"><button>Socials</button></a>
+        </div>
     </body>
 </html>
