--- a/art.html
+++ b/art.html
@@ -27,6 +27,8 @@
                 display: block;
                 margin: auto;
                 height: 80%;
+                max-height: 80%;
+                max-width: 80%;
                 width: auto;
             }
         </style>
