--- a/art.html
+++ b/art.html
@@ -26,7 +26,7 @@
             .single-image {
                 display: block;
                 margin: auto;
-                height: 80%;
+                /* height: 80%; */
                 max-height: 80%;
                 max-width: 80%;
                 width: auto;
