--- a/art.html
+++ b/art.html
@@ -27,6 +27,7 @@
                 display: block;
                 margin: auto;
                 /* height: 80%; */
+                min-height: 60%;
                 max-height: 80%;
                 max-width: 80%;
                 width: auto;
