--- a/art.html
+++ b/art.html
@@ -35,8 +35,9 @@
         </style>
     </head>
     <body>
-        <div id="single-display" class="single-display" onclick="this.style.display = 'none';">
-            <img id="single-image" src="images/OthelloGamePlay.png" class="single-image"/>
+        <div id="single-display" class="single-display">
+            <img id="single-image" class="single-image" onclick="this.parentElement.style.display = 'none';"/>
+            <p id="share"></p>
         </div>
         
         <h1 style="margin-top: 60px;">Art Portfolio</h1>
@@ -57,13 +58,23 @@
                     image.onclick = function() {select(image.src);};
                     display.appendChild(image);
                 });
+
+                // Check if there are input parameters
+                var queryString = window.location.search;
+
+                if (queryString != "") {
+                    queryString = queryString.substring(1);
+                    select(queryString);
+                }
             }
 
             function select(value) {
                 var display = document.getElementById("single-display");
                 var image = document.getElementById("single-image");
+                var share = document.getElementById("share");
 
                 image.src = value;
+                share.innerText = "https://admiralgama.github.io/art.html?" + value;
                 display.style.display = "block";
             }
 
