member pages updates

--- a/headmates/flux.html
+++ b/headmates/flux.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1 style="margin-top: 60px;">Flux</h1>
+
+        <p>Usually very shy, please don't touch him without asking. Gets overstim very easily.</p>
+        <p>Is a furry and a very wholesome bean</p>
+        <p>He has a lot of fragments which are basically various splits of his personality, because apparently we couldn't just stop at one system and have a system inside of a system TwT</p>
     </body>
 </html>
