--- a/headmates/gabi.html
+++ b/headmates/gabi.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1 style="margin-top: 60px;">Gabi</h1>
+
+        <p>Catgirl fictive of a pretty niche character from an in-development indie game. Very chill.</p>
+        <p>Very rarely fronts so barely knows anyone, but would like to make friends</p>
     </body>
 </html>
