--- a/headmates/jaiden.html
+++ b/headmates/jaiden.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1 style="margin-top: 60px;">Jaiden</h1>
+
+        <p>Probably who you're talking to right now if we're showing you this irl lol, also the one who wrote this guide.</p>
+        <p>Flirty Bi mess, loves physical affection and praise</p>
     </body>
 </html>
