--- a/headmates/stella.html
+++ b/headmates/stella.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1 style="margin-top: 60px;">Stella</h1>
+
+        <p>Kinda walks the line between just fragment and full headmate so we aren't totally sure</p>
+        <p>Horny gremlin, and struggles to front unless she's actively being at least one of those two things</p>
+        <p>Also a furry lol</p>
     </body>
 </html>
