--- a/headmates/jay.html
+++ b/headmates/jay.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1 style="margin-top: 60px;">Jay</h1>
+
+        <p>Original host. Kind of a dick because of internal issues, but he's doing his best to work on it.</p>
+        <p>Doesn't usually respond well to affection so avoid unless you're close to him or at least ask first.</p>
     </body>
 </html>
