--- a/headmates/void.html
+++ b/headmates/void.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1 style="margin-top: 60px;">Void</h1>
+
+        <p>Kinda a weirdo lol but not in a bad way</p>
+        <p>Basically just spaces out or says weird shit, not around very often and usually isn't for long</p>
+        <p>Used to really not want to exist, but they've either just accepted or suppressed it at this point</p>
     </body>
 </html>
