--- a/headmates/collective.html
+++ b/headmates/collective.html
@@ -16,28 +16,9 @@
         ></script>
 
         <link rel="stylesheet" href="../css/main.css">
-
-        <style>
-            .description p {
-                width: 100%;
-                text-align: left;
-            }
-
-            div {
-                padding: 2%;
-            }
-
-            a {
-                font-size: 18px;
-            }
-        </style>
+        <link rel="stylesheet" href="../css/headmates.css">
     </head>
     <body>
-        <h1 style="margin-top: 60px;">Host/Collective</h1>
-
-        <p>We're a diversian system with 4 main members and a few fragments that come and go</p>
-        <p>Jaiden fronts the most often out of all of us and is who you'll talk to most often, especially if you don't know us that well</p>
-
         <div style="margin-left: 10%; margin-right: 10%;">
             <div class="row">
                 <div style="width: 30%;"><img src="../images/headmates/collective.png" style="width: 60%;"/></div>
@@ -47,26 +28,39 @@
                     <p>Jaiden fronts the most often out of all of us and is who you'll talk to most often, especially if you don't know us that well</p>
                 </div>
                 <div style="width: 30%;">
-                    <div><span><img src="../images/icons/globe.png" style="height: 20px;"/> </span><a href="https://cake.avris.it/pB3">Layer Cake</a></div>
-                    <div><span><img src="../images/icons/globe.png" style="height: 20px;"/> </span><a href="https://www.tumblr.com/admiralgama">Tumblr</a></div>
+                    <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/pB3">Layer Cake</a></div>
+                    <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama">Tumblr</a></div>
                 </div>
             </div>
 
-            <div class="row row-cols-3">
+            <div class="row row-cols-3 terms">
                 <div>
                     <h2>Names</h2>
+                    <p><img src="../images/icons/heart.png"/> Jaiden</p>
+                    <p><img src="../images/icons/thumbsup.png"/> Jay</p>
+                    <p><img src="../images/icons/thumbsdown.png"/> [deadname]</p>
                 </div>
                 <div>
                     <h2>Pronouns</h2>
+                    <p><img src="../images/icons/heart.png"/> She/Her</p>
+                    <p><img src="../images/icons/thumbsup.png"/> He/Him</p>
+                    <p><img src="../images/icons/thumbsdown.png"/> They/Them</p>
                 </div>
                 <div>
                     <h2>Descriptors</h2>
+                    <p><img src="../images/icons/heart.png"/> System</p>
+                    <p><img src="../images/icons/heart.png"/> Trans</p>
+                    <p><img src="../images/icons/thumbsup.png"/> Fluid</p>
+                    <p><img src="../images/icons/thumbsdown.png"/> Trap</p>
                 </div>
                 <div>
                     <h2>Gendered Terms</h2>
-                </div>
-                <div>
-                    <h2>Compliments</h2>
+                    <p><img src="../images/icons/heart.png"/> Girlfriend</p>
+                    <p><img src="../images/icons/thumbsup.png"/> Partner</p>
+                    <p><img src="../images/icons/thumbsdown.png"/> Boyfriend</p>
+                    <p><img src="../images/icons/heart.png"/> Girl</p>
+                    <p><img src="../images/icons/thumbsdown.png"/> Boy</p>
+                    <p><img src="../images/icons/thumbsdown.png"/> Enby/Nonbinary</p>
                 </div>
             </div>
         </div>
