--- a/headmates/collective.html
+++ b/headmates/collective.html
@@ -21,13 +21,13 @@
     <body>
         <div style="margin-left: 10%; margin-right: 10%;">
             <div class="row">
-                <div style="width: 30%;"><img src="../images/headmates/collective.png" style="width: 60%;"/></div>
-                <div class="description" style="width: 40%;">
+                <div style="width: 20%;"><img src="../images/headmates/collective.png" style="width: 100%;"/></div>
+                <div class="description" style="width: 60%;">
                     <h2>Jaiden/Jay</h2>
                     <p>We're a diversian system with 4 main members and a few fragments that come and go</p>
                     <p>Jaiden fronts the most often out of all of us and is who you'll talk to most often, especially if you don't know us that well</p>
                 </div>
-                <div style="width: 30%;">
+                <div style="width: 20%;">
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/pB3">Layer Cake</a></div>
                     <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama">Tumblr</a></div>
                 </div>
@@ -51,7 +51,8 @@
                     <p><img src="../images/icons/heart.png"/> System</p>
                     <p><img src="../images/icons/heart.png"/> Trans</p>
                     <p><img src="../images/icons/thumbsup.png"/> Fluid</p>
-                    <p><img src="../images/icons/thumbsdown.png"/> Trap</p>
+                    <p><img src="../images/icons/friends.png"/> Femboy</p>
+                    <p><img src="../images/icons/thumbsdown.png"/> Trap (I'll fucking kill you)</p>
                 </div>
                 <div>
                     <h2>Gendered Terms</h2>
@@ -62,6 +63,20 @@
                     <p><img src="../images/icons/thumbsdown.png"/> Boy</p>
                     <p><img src="../images/icons/thumbsdown.png"/> Enby/Nonbinary</p>
                 </div>
+                <div>
+                    <h2>Compliments</h2>
+                    <p><img src="../images/icons/heart.png"/> Cute</p>
+                    <p><img src="../images/icons/thumbsup.png"/> Pretty</p>
+                    <p><img src="../images/icons/friends.png"/> Hot</p>
+                    <p><img src="../images/icons/thumbsdown.png"/> Handsome</p>
+                </div>
+            </div>
+
+            <div class="terms row">
+                <div class="col"><p><img src="../images/icons/heart.png"/> Favorite</p></div>
+                <div class="col"><p><img src="../images/icons/thumbsup.png"/> Good</p></div>
+                <div class="col"><p><img src="../images/icons/thumbsdown.png"/> Bad</p></div>
+                <div class="col"><p><img src="../images/icons/friends.png"/> Only if we're close</p></div>
             </div>
         </div>
     </body>
