--- a/headmates/flux.html
+++ b/headmates/flux.html
@@ -2,13 +2,76 @@
 <html lang="en">
     <head>
         <title>Flux</title>
+        
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous"
+        />
+        <script defer
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"
+        ></script>
+
         <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/headmates.css">
     </head>
     <body>
-        <h1 style="margin-top: 60px;">Flux</h1>
+        <div style="margin-left: 10%; margin-right: 10%;">
+            <div class="row">
+                <div style="width: 20%;"><img src="../images/headmates/flux.png" style="width: 100%;"/></div>
+                <div class="description" style="width: 60%;">
+                    <h2>Flux</h2>
+                    <p>Boyflux, masc and neutral terms are okay, but fem terms are only okay if we're really super close and you ask</p>
+                    <p>Usually very shy, please don't touch him without asking. Gets overstim very easily.</p>
+                    <p>Is a furry and a very wholesome bean</p>
+                    <p>He has a lot of fragments which are basically various splits of his personality, because apparently we couldn't just stop at one system and have a system inside of a system TwT</p>
+                </div>
+                <div style="width: 20%;">
+                    <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/gD3">Layer Cake</a></div>
+                    <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama">Tumblr</a></div>
+                </div>
+            </div>
 
-        <p>Usually very shy, please don't touch him without asking. Gets overstim very easily.</p>
-        <p>Is a furry and a very wholesome bean</p>
-        <p>He has a lot of fragments which are basically various splits of his personality, because apparently we couldn't just stop at one system and have a system inside of a system TwT</p>
+            <div class="row row-cols-3 terms">
+                <div>
+                    <h2>Pronouns</h2>
+                    <p><img src="../images/icons/heart.png"/> They/Them</p>
+                    <p><img src="../images/icons/heart.png"/> He/Him</p>
+                    <p><img src="../images/icons/friends.png"/> She/Her</p>
+                </div>
+                <div>
+                    <h2>Descriptors</h2>
+                    <p><img src="../images/icons/heart.png"/> Boyflux</p>
+                    <p><img src="../images/icons/heart.png"/> Fluid</p>
+                    <p><img src="../images/icons/friends.png"/> Femboy</p>
+                </div>
+                <div>
+                    <h2>Gendered Terms</h2>
+                    <p><img src="../images/icons/heart.png"/> Partner</p>
+                    <p><img src="../images/icons/thumbsup.png"/> Girlfriend</p>
+                    <p><img src="../images/icons/thumbsup.png"/> Boyfriend</p>
+                    <p><img src="../images/icons/heart.png"/> Enby/Nonbinary</p>
+                    <p><img src="../images/icons/heart.png"/> Boy</p>
+                    <p><img src="../images/icons/friends.png"/> Girl</p>
+                </div>
+                <div>
+                    <h2>Compliments</h2>
+                    <p><img src="../images/icons/heart.png"/> Cute</p>
+                    <p><img src="../images/icons/friends.png"/> Pretty</p>
+                    <p><img src="../images/icons/thumbsdown.png"/> Hot</p>
+                    <p><img src="../images/icons/thumbsdown.png"/> Handsome</p>
+                </div>
+            </div>
+            
+            <div class="terms row">
+                <div class="col"><p><img src="../images/icons/heart.png"/> Favorite</p></div>
+                <div class="col"><p><img src="../images/icons/thumbsup.png"/> Good</p></div>
+                <div class="col"><p><img src="../images/icons/thumbsdown.png"/> Bad</p></div>
+                <div class="col"><p><img src="../images/icons/friends.png"/> Only if we're close</p></div>
+            </div>
+        </div>
     </body>
 </html>
