--- a/headmates/jay.html
+++ b/headmates/jay.html
@@ -2,12 +2,52 @@
 <html lang="en">
     <head>
         <title>Jay</title>
+        
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous"
+        />
+        <script defer
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"
+        ></script>
+
         <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/headmates.css">
     </head>
     <body>
-        <h1 style="margin-top: 60px;">Jay</h1>
+        <div style="margin-left: 10%; margin-right: 10%;">
+            <div class="row">
+                <div style="width: 20%;"><img src="../images/headmates/jay.png" style="width: 100%;"/></div>
+                <div class="description" style="width: 60%;">
+                    <h2>Jay</h2>
+                    <p>Original host. Kind of a dick because of internal issues, but he's doing his best to work on it.</p>
+                    <p>Doesn't usually respond well to affection so avoid unless you're close to him or at least ask first.</p>
+                </div>
+                <div style="width: 20%;">
+                    <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/oB1">Layer Cake</a></div>
+                    <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama-jay">Tumblr</a></div>
+                </div>
+            </div>
 
-        <p>Original host. Kind of a dick because of internal issues, but he's doing his best to work on it.</p>
-        <p>Doesn't usually respond well to affection so avoid unless you're close to him or at least ask first.</p>
+            <div class="row row-cols-3 terms">
+                <div>
+                    <h2>Pronouns</h2>
+                    <p><img src="../images/icons/heart.png"/> He/Him</p>
+                    <p><img src="../images/icons/thumbsup.png"/> They/Them</p>
+                    <p><img src="../images/icons/friends.png"/> She/Her</p>
+                </div>
+            </div>
+            
+            <div class="terms row">
+                <div class="col"><p><img src="../images/icons/heart.png"/> Favorite</p></div>
+                <div class="col"><p><img src="../images/icons/thumbsup.png"/> Good</p></div>
+                <div class="col"><p><img src="../images/icons/thumbsdown.png"/> Bad</p></div>
+                <div class="col"><p><img src="../images/icons/friends.png"/> Only if we're close</p></div>
+            </div>
+        </div>
     </body>
 </html>
