--- a/headmates/void.html
+++ b/headmates/void.html
@@ -2,13 +2,53 @@
 <html lang="en">
     <head>
         <title>Void</title>
+        
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous"
+        />
+        <script defer
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"
+        ></script>
+
         <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/headmates.css">
     </head>
     <body>
-        <h1 style="margin-top: 60px;">Void</h1>
+        <div style="margin-left: 10%; margin-right: 10%;">
+            <div class="row">
+                <div style="width: 20%;"><img src="../images/headmates/void.png" style="width: 100%;"/></div>
+                <div class="description" style="width: 60%;">
+                    <h2>Void</h2>
+                    <p>Kinda a weirdo lol but not in a bad way</p>
+                    <p>Basically just spaces out or says weird shit, not around very often and usually isn't for long</p>
+                    <p>Used to really not want to exist, but they've either just accepted or suppressed it at this point</p>
+                </div>
+                <div style="width: 20%;">
+                    <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://cake.avris.it/bC3">Layer Cake</a></div>
+                    <div><span><img src="../images/icons/globe.png" class="icon"/> </span><a href="https://www.tumblr.com/admiralgama-void">Tumblr</a></div>
+                </div>
+            </div>
 
-        <p>Kinda a weirdo lol but not in a bad way</p>
-        <p>Basically just spaces out or says weird shit, not around very often and usually isn't for long</p>
-        <p>Used to really not want to exist, but they've either just accepted or suppressed it at this point</p>
+            <div class="row row-cols-3 terms">
+                <div>
+                    <h2>Pronouns</h2>
+                    <p><img src="../images/icons/heart.png"/> It/Its</p>
+                    <p><img src="../images/icons/heart.png"/> They/Them</p>
+                    <p><img src="../images/icons/thumbsdown.png"/> Anything Else</p>
+                </div>
+            </div>
+            
+            <div class="terms row">
+                <div class="col"><p><img src="../images/icons/heart.png"/> Favorite</p></div>
+                <div class="col"><p><img src="../images/icons/thumbsup.png"/> Good</p></div>
+                <div class="col"><p><img src="../images/icons/thumbsdown.png"/> Bad</p></div>
+                <div class="col"><p><img src="../images/icons/friends.png"/> Only if we're close</p></div>
+            </div>
+        </div>
     </body>
 </html>
