--- a/portfolio.html
+++ b/portfolio.html
@@ -21,15 +21,15 @@
         <h2 id="projects">Projects</h2>
 
         <div class="centered">
-            <a href="projects/Android-Apps.html" target="_blank"><button>Android Apps</button></a>
+            <a href="projects/Android-Apps.html"><button>Android Apps</button></a>
         </div>
 
         <div class="centered">
-            <a href="projects/Water-Quality.html" target="_blank"><button>Water Quality Monitoring</button></a>
+            <a href="projects/Water-Quality.html"><button>Water Quality Monitoring</button></a>
         </div>
 
         <div class="centered">
-            <a href="projects.html" target="_blank"><button>Full List</button></a>
+            <a href="projects.html"><button>Full List</button></a>
         </div>
 
         <h2 id="resume">Resume</h2>
@@ -39,7 +39,7 @@
         </div>-->
 
         <div class="centered">
-            <a href="resume.html" target="_blank"><button>View</button></a>
+            <a href="resume.html"><button>View</button></a>
         </div>
 
         <div class="centered">
