--- a/projects.html
+++ b/projects.html
@@ -8,15 +8,15 @@
         <h1>Projects</h2>
 
         <div class="centered">
-            <a href="projects/Android-Apps.html" target="_blank"><button>Android Apps</button></a>
+            <a href="projects/Android-Apps.html"><button>Android Apps</button></a>
         </div>
 
         <div class="centered">
-            <a href="projects/Water-Quality.html" target="_blank"><button>Water Quality Monitoring</button></a>
+            <a href="projects/Water-Quality.html"><button>Water Quality Monitoring</button></a>
         </div>
 
         <div class="centered">
-            <a href="projects/Elite-Material-Sorter.html" target="_blank"><button>Elite Dangerous Material Sorter</button></a>
+            <a href="projects/Elite-Material-Sorter.html"><button>Elite Dangerous Material Sorter</button></a>
         </div>
     </body>
 </html>
