--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
         <h1 style="margin-top: 60px;">AdmiralGama's Site</h1>
 
         <div class="centered">
-            <a href="portfolio.html" target="_blank"><button>Software Engineering Portfolio</button></a>
+            <a href="portfolio.html"><button>Software Engineering Portfolio</button></a>
         </div>
         
         <div class="centered">
-            <a href="comics.html" target="_blank"><button>Comics</button></a>
+            <a href="comics.html"><button>Comics</button></a>
         </div>
 
         <div class="centered">
-            <a href="art.html" target="_blank"><button>Art Portfolio</button></a>
+            <a href="art.html"><button>Art Portfolio</button></a>
         </div>
 
         <div class="centered">
-            <a href="electronics.html" target="_blank"><button>Electronics Projects</button></a>
+            <a href="electronics.html"><button>Electronics Projects</button></a>
         </div>
 
         <div class="centered">
-            <a href="system.html" target="_blank"><button>System Info</button></a>
+            <a href="system.html"><button>System Info</button></a>
         </div>
 
         <div class="centered">
-            <a href="socials.html" target="_blank"><button>Socials</button></a>
+            <a href="socials.html"><button>Socials</button></a>
         </div>
     </body>
 </html>
