--- a/projects/Android-Apps.html
+++ b/projects/Android-Apps.html
@@ -13,18 +13,22 @@
             <img src="../images/OthelloGamePlay.png" height="400px"/>
         </div>
 
-        <p>I recreated the game of Othello as a mobile application using Android Studio. It displays a game board with all currently placed pieces, and shows available places where the current player can place a piece. This required the use of advanced logic to calculate available placement positions, as the game of Othello determines where you can place pieces depending on those already placed. Thus, it must take into account every piece already on the board. It also displays who's turn it is, as well as the running score and gives an option to restart the game.</p>
+        <p>I recreated the game of Othello as a mobile application using Android Studio. It displays a game board with all currently placed pieces, and shows available places where the current player can place a piece. This required the use of advanced logic to calculate available placement positions, as the game of Othello determines where you can place pieces depending on those already placed. Thus, it must take into account every piece already on the board. It also displays whose turn it is, as well as the running score and gives an option to restart the game.</p>
 
         <div class="centered">
-            <a href="https://github.com/AdmiralGama/OthelloMobileApp" target="_blank"><button class="repo-button">Repository</button></a>
+            <a href="https://github.com/AdmiralGama/OthelloMobileApp"><button class="repo-button">Repository</button></a>
         </div>
 
         <h2>Astronomy Picture of the Day</h2>
 
-        <p>APoD content</p>
+        <div class="centered">
+            <img src="../images/APoDExample.png" height="400px"/>
+        </div>
+
+        <p>I created another mobile application using Android Studio that displays an astronomy picture of the day along with its description. This required learning how to access and process results from a REST API, as well as displaying images. I also had to implement error handling for the API, as it does not always succeed in its request and there are multiple possible error states it can return.</p>
 
         <div class="centered">
-            <a href="https://github.com/AdmiralGama/PictureOfTheDayMobileApp" target="_blank"><button class="repo-button">Repository</button></a>
+            <a href="https://github.com/AdmiralGama/PictureOfTheDayMobileApp"><button class="repo-button">Repository</button></a>
         </div>
     </body>
 </html>
