--- a/projects/Water-Quality.html
+++ b/projects/Water-Quality.html
@@ -7,10 +7,12 @@
     <body>
         <h1>Water Quality Monitoring</h1>
 
-        <p>Water Quality Monitoring content</p>
+        <div class="centered" style="margin-bottom: 20px;">
+            <embed src="../resources/CadenOslund315ProjectReport.pdf" width="1000" height="1150" type="application/pdf">
+        </div>
 
         <div class="centered">
-            <a href="https://github.com/AdmiralGama/WaterQualityMonitoringModel" target="_blank"><button class="repo-button">Repository</button></a>
+            <a href="https://github.com/AdmiralGama/WaterQualityMonitoringModel"><button class="repo-button">Repository</button></a>
         </div>
     </body>
 </html>
