--- a/socials.html
+++ b/socials.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1 style="margin-top: 60px;">Socials</h1>
+
+        <div class="centered">
+            <a href="https://www.tumblr.com/admiralgama"><button>Tumblr</button></a>
+        </div>
     </body>
 </html>
