--- a/system.html
+++ b/system.html
@@ -25,14 +25,14 @@
         <h1 style="margin-top: 60px;">System Info</h1>
 
         <div id="display" class="row">
-            <div class="image"><a href="headmates/collective.html" target="_blank"><img src="images/headmates/collective.png"/></a><h2>Host/Collective</h2></div>
-            <div class="image"><a href="headmates/jaiden.html" target="_blank"><img src="images/headmates/jaiden.png"/></a><h2>Jaiden</h2></div>
-            <div class="image"><a href="headmates/jay.html" target="_blank"><img src="images/headmates/jay.png"/></a><h2>Jay</h2></div>
-            <div class="image"><a href="headmates/flux.html" target="_blank"><img src="images/headmates/flux.png"/></a><h2>Flux</h2></div>
-            <div class="image"><a href="headmates/gabi.html" target="_blank"><img src="images/headmates/gabi.png"/></a><h2>Gabi</h2></div>
-            <div class="image"><a href="headmates/stella.html" target="_blank"><img src="images/headmates/stella.png"/></a><h2>Stella</h2></div>
-            <div class="image"><a href="headmates/void.html" target="_blank"><img src="images/headmates/void.png"/></a><h2>Void</h2></div>
-            <div class="image"><a href="headmates/aster.html" target="_blank"><img src="images/headmates/aster.png"/></a><h2>Aster</h2></div>
+            <div class="image"><a href="headmates/collective.html"><img src="images/headmates/collective.png"/></a><h2>Host/Collective</h2></div>
+            <div class="image"><a href="headmates/jaiden.html"><img src="images/headmates/jaiden.png"/></a><h2>Jaiden</h2></div>
+            <div class="image"><a href="headmates/jay.html"><img src="images/headmates/jay.png"/></a><h2>Jay</h2></div>
+            <div class="image"><a href="headmates/flux.html"><img src="images/headmates/flux.png"/></a><h2>Flux</h2></div>
+            <div class="image"><a href="headmates/gabi.html"><img src="images/headmates/gabi.png"/></a><h2>Gabi</h2></div>
+            <div class="image"><a href="headmates/stella.html"><img src="images/headmates/stella.png"/></a><h2>Stella</h2></div>
+            <div class="image"><a href="headmates/void.html"><img src="images/headmates/void.png"/></a><h2>Void</h2></div>
+            <div class="image"><a href="headmates/aster.html"><img src="images/headmates/aster.png"/></a><h2>Aster</h2></div>
         </div>
     </body>
 </html>
